--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vue-multiselect-listbox": "0.0.20",
         "vue-select": "^2.4.0",
         "vue-stepper": "^1.4.2",
+        "vue2-dropzone": "^3.6.0",
         "xlsx": "^0.15.6"
     }
 }
